# miku

./: .gitignore  .replit  README.md  discordbot.py  keep_alive.py  pyproject.toml  requirements.min.txt  requirements.txt
.github/workflows/: stale.yml
cogs/: botevents.py  info.py  music.py  statuspost.py  vocaloids.py
cogs/anime and vocaloids/: vocaloids.py  vocaloids_slash.py  waifu.py
cogs/developer/: developer.py
cogs/util/: meek_moe.py  post_stats_log.py  privacy_vote.py
util/: __init__.py  blacklistservers.txt  images_list.txt  meek_moe.py  post_stats_log.py  var.py
